feat:unificacion de estilos

--- a/.gitignore
+++ b/.gitignore
@@ -32,14 +32,14 @@ sdist/
 var/
 wheels/
 share/python-wheels/
-*.egg-info/
+*.egg-primary/
 .installed.cfg
 *.egg
 MANIFEST
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+#  before PyInstaller builds the exe, so as to inject date/other primarys into it.
 *.manifest
 *.spec
 
@@ -177,7 +177,7 @@ cython_debug/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+#  before PyInstaller builds the exe, so as to inject date/other primarys into it.
 
 # Installer logs
 
